/*!
*****************************************************************************
** FileName     : gk_cms_session.h
**
** Description  : api for cms session.
**
** Author       : Bruce <zhaoquanfeng@gokemicro.com>
** Date         : 2015-9-9, create.
**
** (C) Copyright 2013-2014 by GOKE MICROELECTRONICS CO.,LTD
**
*****************************************************************************
*/

#ifndef _GK_CMS_SESSION_H_
#define _GK_CMS_SESSION_H_

#ifdef __cplusplus
extern "C"
{
#endif

int gk_cms_start();
int gk_cms_stop();

#ifdef __cplusplus
}
#endif
#endif
